src/test/deca/syntax/invalid/Objet/ListClasses-NoTypeField.deca
// Description:
//      Syntaxically incorrect program
//
// Result:
//      Parsing error on line 11
//
// History:
//      Created in 17/1/2022

class A {
    protected x;
}
